--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "@tanstack/react-query": "^5.87.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "graphql": "^16.11.0",
+    "graphql-request": "^7.2.0",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
