--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -17,5 +17,8 @@
     "hardhat": "^3.0.6",
     "mocha": "^11.0.0",
     "typescript": "~5.8.0"
+  },
+  "dependencies": {
+    "@chainlink/contracts": "^1.4.0"
   }
 }
