--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "rafikns",
+  "name": "rafikprotocol",
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ rafikns",
-    "create-local": "graph create --node http://localhost:8020/ rafikns",
-    "remove-local": "graph remove --node http://localhost:8020/ rafikns",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 rafikns",
+    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ rafikprotocol",
+    "create-local": "graph create --node http://localhost:8020/ rafikprotocol",
+    "remove-local": "graph remove --node http://localhost:8020/ rafikprotocol",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 rafikprotocol",
     "test": "graph test"
   },
   "dependencies": {
