update and refactor

--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -20,6 +20,8 @@ dataSources:
         - CreatedName
         - EthUSDTPrice
         - Messaging
+        - User
+        - Protocol
       abis:
         - name: RafikNS
           file: ./abis/RafikNS.json
